#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æµ‹è¯•7ä¸ªå‰ç«¯æ¥å£åœ¨ç”Ÿäº§ç¯å¢ƒæ˜¯å¦å¯ç”¨ï¼ˆéªŒè¯7ä¸ªæ ‡å‡†å‚æ•°ï¼‰

æµ‹è¯•æ¥å£ï¼š
- /bazi/interface (åŸºæœ¬ä¿¡æ¯)
- /bazi/pan/display (åŸºæœ¬æ’ç›˜)
- /bazi/fortune/display (ä¸“ä¸šæ’ç›˜-å¤§è¿æµå¹´æµæœˆ)
- /daily-fortune-calendar/query (å…«å­—å‘½ç†-æ¯æ—¥è¿åŠ¿)
- /bazi/wuxing-proportion (å…«å­—å‘½ç†-äº”è¡Œå æ¯”)
- /bazi/rizhu-liujiazi (å…«å­—å‘½ç†-æ—¥å…ƒ-å…­åç”²å­)
- /bazi/xishen-jishen (å…«å­—å‘½ç†-å–œç¥å¿Œç¥)
"""

import sys
import os
import json
import requests
from typing import Dict, Any

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
PROJECT_ROOT = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, PROJECT_ROOT)

# å¯¼å…¥æµ‹è¯•å·¥å…·å‡½æ•°
from scripts.test_frontend_gateway import (
    test_gateway_endpoint,
    API_BASE_URL
)

# ç”Ÿäº§ç¯å¢ƒé…ç½®
NODE1_URL = "http://8.210.52.217:8001"
NODE2_URL = "http://47.243.160.43:8001"

# æ ‡å‡†æµ‹è¯•å‚æ•°ï¼ˆ7ä¸ªæ ‡å‡†å‚æ•°ï¼‰
STANDARD_PARAMS = {
    "solar_date": "1990-01-15",
    "solar_time": "12:00",
    "gender": "male",
    "calendar_type": "solar",
    "location": "åŒ—äº¬",
    "latitude": 39.90,
    "longitude": 116.40
}

# 7ä¸ªå‰ç«¯æ¥å£åˆ—è¡¨
FRONTEND_APIS = [
    ("/bazi/interface", "åŸºæœ¬ä¿¡æ¯"),
    ("/bazi/pan/display", "åŸºæœ¬æ’ç›˜"),
    ("/bazi/fortune/display", "ä¸“ä¸šæ’ç›˜-å¤§è¿æµå¹´æµæœˆ"),
    ("/daily-fortune-calendar/query", "å…«å­—å‘½ç†-æ¯æ—¥è¿åŠ¿"),
    ("/bazi/wuxing-proportion", "å…«å­—å‘½ç†-äº”è¡Œå æ¯”"),
    ("/bazi/rizhu-liujiazi", "å…«å­—å‘½ç†-æ—¥å…ƒ-å…­åç”²å­"),
    ("/bazi/xishen-jishen", "å…«å­—å‘½ç†-å–œç¥å¿Œç¥"),
]


def test_api_direct(node_url: str, endpoint: str, api_name: str) -> Dict[str, Any]:
    """
    ç›´æ¥æµ‹è¯• REST APIï¼ˆä¸é€šè¿‡ gRPC ç½‘å…³ï¼‰
    
    Args:
        node_url: èŠ‚ç‚¹ URL
        endpoint: ç«¯ç‚¹è·¯å¾„
        api_name: API åç§°
        
    Returns:
        Dict: æµ‹è¯•ç»“æœ
    """
    url = f"{node_url}/api/v1{endpoint}"
    
    try:
        response = requests.post(
            url,
            json=STANDARD_PARAMS,
            headers={"Content-Type": "application/json"},
            timeout=30
        )
        
        result = {
            "success": response.status_code == 200,
            "status_code": response.status_code,
            "error": None,
            "data": None
        }
        
        if response.status_code == 200:
            try:
                result["data"] = response.json()
            except json.JSONDecodeError:
                result["data"] = response.text[:200]
        else:
            result["error"] = response.text[:200]
        
        return result
        
    except requests.exceptions.RequestException as e:
        return {
            "success": False,
            "status_code": 0,
            "error": str(e),
            "data": None
        }


def test_api_via_gateway(node_url: str, endpoint: str, api_name: str) -> Dict[str, Any]:
    """
    é€šè¿‡ gRPC ç½‘å…³æµ‹è¯• API
    
    Args:
        node_url: èŠ‚ç‚¹ URL
        endpoint: ç«¯ç‚¹è·¯å¾„
        api_name: API åç§°
        
    Returns:
        Dict: æµ‹è¯•ç»“æœ
    """
    # ä¸´æ—¶ä¿®æ”¹ API_BASE_URL
    import scripts.test_frontend_gateway as test_module
    original_url = test_module.API_BASE_URL
    test_module.API_BASE_URL = node_url
    
    try:
        result = test_gateway_endpoint(endpoint, STANDARD_PARAMS)
        return {
            "success": result.get('success', False),
            "status_code": result.get('status_code', 0),
            "error": result.get('error'),
            "data": result.get('data')
        }
    finally:
        test_module.API_BASE_URL = original_url


def test_single_api(endpoint: str, api_name: str) -> Dict[str, Any]:
    """
    æµ‹è¯•å•ä¸ªæ¥å£ï¼ˆNode1 å’Œ Node2ï¼‰
    
    Args:
        endpoint: ç«¯ç‚¹è·¯å¾„
        api_name: API åç§°
        
    Returns:
        Dict: æµ‹è¯•ç»“æœ
    """
    print(f"\n{'='*60}")
    print(f"æµ‹è¯•: {api_name} ({endpoint})")
    print(f"{'='*60}")
    
    results = {
        "api_name": api_name,
        "endpoint": endpoint,
        "node1": {},
        "node2": {}
    }
    
    # æµ‹è¯• Node1ï¼ˆç›´æ¥ REST APIï¼‰
    print(f"\nğŸ“¡ Node1 (8.210.52.217) - ç›´æ¥ REST API:")
    node1_direct = test_api_direct(NODE1_URL, endpoint, api_name)
    results["node1"]["direct"] = node1_direct
    
    if node1_direct["success"]:
        print(f"   âœ… æˆåŠŸ (HTTP {node1_direct['status_code']})")
        if node1_direct.get("data"):
            data = node1_direct["data"]
            if isinstance(data, dict):
                print(f"   ğŸ“Š æ•°æ®é”®: {list(data.keys())[:5]}...")
    else:
        print(f"   âŒ å¤±è´¥: {node1_direct.get('error', 'æœªçŸ¥é”™è¯¯')}")
    
    # æµ‹è¯• Node1ï¼ˆé€šè¿‡ gRPC ç½‘å…³ï¼‰
    print(f"\nğŸ“¡ Node1 (8.210.52.217) - gRPC ç½‘å…³:")
    node1_gateway = test_api_via_gateway(NODE1_URL, endpoint, api_name)
    results["node1"]["gateway"] = node1_gateway
    
    if node1_gateway["success"]:
        print(f"   âœ… æˆåŠŸ (HTTP {node1_gateway['status_code']})")
    else:
        print(f"   âŒ å¤±è´¥: {node1_gateway.get('error', 'æœªçŸ¥é”™è¯¯')}")
    
    # æµ‹è¯• Node2ï¼ˆç›´æ¥ REST APIï¼‰
    print(f"\nğŸ“¡ Node2 (47.243.160.43) - ç›´æ¥ REST API:")
    node2_direct = test_api_direct(NODE2_URL, endpoint, api_name)
    results["node2"]["direct"] = node2_direct
    
    if node2_direct["success"]:
        print(f"   âœ… æˆåŠŸ (HTTP {node2_direct['status_code']})")
        if node2_direct.get("data"):
            data = node2_direct["data"]
            if isinstance(data, dict):
                print(f"   ğŸ“Š æ•°æ®é”®: {list(data.keys())[:5]}...")
    else:
        print(f"   âŒ å¤±è´¥: {node2_direct.get('error', 'æœªçŸ¥é”™è¯¯')}")
    
    # æµ‹è¯• Node2ï¼ˆé€šè¿‡ gRPC ç½‘å…³ï¼‰
    print(f"\nğŸ“¡ Node2 (47.243.160.43) - gRPC ç½‘å…³:")
    node2_gateway = test_api_via_gateway(NODE2_URL, endpoint, api_name)
    results["node2"]["gateway"] = node2_gateway
    
    if node2_gateway["success"]:
        print(f"   âœ… æˆåŠŸ (HTTP {node2_gateway['status_code']})")
    else:
        print(f"   âŒ å¤±è´¥: {node2_gateway.get('error', 'æœªçŸ¥é”™è¯¯')}")
    
    # åˆ¤æ–­æ•´ä½“æ˜¯å¦æˆåŠŸ
    all_success = (
        node1_direct["success"] and
        node1_gateway["success"] and
        node2_direct["success"] and
        node2_gateway["success"]
    )
    
    results["overall_success"] = all_success
    return results


def verify_frontend_gateway_proto_sync() -> bool:
    """
    éªŒè¯ frontend_gateway.proto åœ¨åŒæœºæ˜¯å¦åŒæ­¥
    
    Returns:
        bool: æ˜¯å¦åŒæ­¥
    """
    print(f"\n{'='*60}")
    print("éªŒè¯ frontend_gateway.proto åŒæœºåŒæ­¥")
    print(f"{'='*60}")
    
    try:
        # æ£€æŸ¥ Node1
        import subprocess
        project_dir = "/opt/HiFate-bazi"
        proto_file_path = os.path.join(project_dir, "proto", "frontend_gateway.proto")
        
        node1_hash = subprocess.check_output(
            f'sshpass -p "{os.getenv("SSH_PASSWORD", os.getenv("MYSQL_PASSWORD", ""))}" '
            f'ssh -o StrictHostKeyChecking=no root@8.210.52.217 '
            f'"md5sum {proto_file_path} | cut -d\\" \\" -f1"',
            shell=True,
            text=True
        ).strip()
        
        # æ£€æŸ¥ Node2
        node2_hash = subprocess.check_output(
            f'sshpass -p "{os.getenv("SSH_PASSWORD", os.getenv("MYSQL_PASSWORD", ""))}" '
            f'ssh -o StrictHostKeyChecking=no root@47.243.160.43 '
            f'"md5sum {proto_file_path} | cut -d\\" \\" -f1"',
            shell=True,
            text=True
        ).strip()
        
        # æ£€æŸ¥æœ¬åœ°ï¼ˆä½¿ç”¨åŠ¨æ€è·¯å¾„ï¼‰
        local_proto_path = os.path.join(PROJECT_ROOT, "proto", "frontend_gateway.proto")
        local_hash = subprocess.check_output(
            f'md5 -q "{local_proto_path}"',
            shell=True,
            text=True
        ).strip()
        
        print(f"æœ¬åœ° MD5: {local_hash}")
        print(f"Node1 MD5: {node1_hash}")
        print(f"Node2 MD5: {node2_hash}")
        
        if node1_hash == node2_hash == local_hash:
            print("âœ… frontend_gateway.proto ä¸‰å¤„å®Œå…¨ä¸€è‡´")
            return True
        else:
            print("âŒ frontend_gateway.proto ä¸ä¸€è‡´")
            if node1_hash != local_hash:
                print("   âš ï¸  Node1 ä¸æœ¬åœ°ä¸ä¸€è‡´")
            if node2_hash != local_hash:
                print("   âš ï¸  Node2 ä¸æœ¬åœ°ä¸ä¸€è‡´")
            if node1_hash != node2_hash:
                print("   âš ï¸  Node1 ä¸ Node2 ä¸ä¸€è‡´")
            return False
            
    except Exception as e:
        print(f"âŒ éªŒè¯å¤±è´¥: {e}")
        return False


def main():
    """ä¸»æµ‹è¯•å‡½æ•°"""
    print("\n" + "="*60)
    print("7ä¸ªå‰ç«¯æ¥å£ç”Ÿäº§ç¯å¢ƒå¯ç”¨æ€§æµ‹è¯•")
    print("="*60)
    print(f"Node1: {NODE1_URL}")
    print(f"Node2: {NODE2_URL}")
    
    # æ£€æŸ¥æœåŠ¡æ˜¯å¦è¿è¡Œ
    for node_name, node_url in [("Node1", NODE1_URL), ("Node2", NODE2_URL)]:
        try:
            response = requests.get(f"{node_url}/health", timeout=5)
            if response.status_code == 200:
                print(f"âœ… {node_name} æœåŠ¡æ­£åœ¨è¿è¡Œ")
            else:
                print(f"âš ï¸  {node_name} æœåŠ¡å“åº”å¼‚å¸¸: HTTP {response.status_code}")
                return 1
        except requests.exceptions.RequestException as e:
            print(f"âŒ {node_name} æœåŠ¡æœªè¿è¡Œæˆ–æ— æ³•è¿æ¥: {e}")
            return 1
    
    # éªŒè¯ frontend_gateway.proto åŒæ­¥
    proto_sync = verify_frontend_gateway_proto_sync()
    
    # æµ‹è¯•7ä¸ªå‰ç«¯æ¥å£
    results = []
    for endpoint, api_name in FRONTEND_APIS:
        result = test_single_api(endpoint, api_name)
        results.append(result)
    
    # æ±‡æ€»ç»“æœ
    print("\n" + "="*60)
    print("æµ‹è¯•ç»“æœæ±‡æ€»")
    print("="*60)
    
    passed = 0
    failed = 0
    
    for result in results:
        api_name = result["api_name"]
        overall_success = result.get("overall_success", False)
        
        status = "âœ… é€šè¿‡" if overall_success else "âŒ å¤±è´¥"
        print(f"\n{api_name}: {status}")
        
        # è¯¦ç»†çŠ¶æ€
        node1_direct = result["node1"]["direct"]["success"]
        node1_gateway = result["node1"]["gateway"]["success"]
        node2_direct = result["node2"]["direct"]["success"]
        node2_gateway = result["node2"]["gateway"]["success"]
        
        print(f"  Node1 REST: {'âœ…' if node1_direct else 'âŒ'}")
        print(f"  Node1 gRPC: {'âœ…' if node1_gateway else 'âŒ'}")
        print(f"  Node2 REST: {'âœ…' if node2_direct else 'âŒ'}")
        print(f"  Node2 gRPC: {'âœ…' if node2_gateway else 'âŒ'}")
        
        if overall_success:
            passed += 1
        else:
            failed += 1
    
    print(f"\n{'='*60}")
    print(f"æ€»è®¡: {passed} ä¸ªé€šè¿‡, {failed} ä¸ªå¤±è´¥")
    print(f"frontend_gateway.proto åŒæ­¥: {'âœ… æ˜¯' if proto_sync else 'âŒ å¦'}")
    print(f"{'='*60}")
    
    if failed == 0 and proto_sync:
        print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼7ä¸ªå‰ç«¯æ¥å£åœ¨ç”Ÿäº§ç¯å¢ƒå¯ç”¨ï¼Œfrontend_gateway.proto å·²åŒæ­¥ã€‚")
        return 0
    else:
        print(f"\nâš ï¸  æœ‰ {failed} ä¸ªæµ‹è¯•å¤±è´¥æˆ– proto æœªåŒæ­¥ï¼Œè¯·æ£€æŸ¥ã€‚")
        return 1


if __name__ == "__main__":
    sys.exit(main())

