#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æµ‹è¯•5ä¸ªåˆ†ææ¥å£çš„ gRPC ç½‘å…³æ”¯æŒï¼ˆéªŒè¯7ä¸ªæ ‡å‡†å‚æ•°ï¼‰

æµ‹è¯•æ¥å£ï¼š
- /bazi/marriage-analysis/stream (å©šå§»åˆ†æ)
- /career-wealth/stream (äº‹ä¸šè´¢å¯Œåˆ†æ)
- /children-study/stream (å­å¥³å­¦ä¸šåˆ†æ)
- /health/stream (å¥åº·åˆ†æ)
- /general-review/stream (æ€»è¯„åˆ†æ)
"""

import sys
import os
import json
import requests

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
PROJECT_ROOT = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, PROJECT_ROOT)

# å¯¼å…¥æµ‹è¯•å·¥å…·å‡½æ•°
from scripts.test_frontend_gateway import (
    test_gateway_endpoint,
    API_BASE_URL
)

# æ ‡å‡†æµ‹è¯•å‚æ•°ï¼ˆ7ä¸ªæ ‡å‡†å‚æ•°ï¼‰
STANDARD_PARAMS = {
    "solar_date": "1990-01-15",
    "solar_time": "12:00",
    "gender": "male",
    "calendar_type": "solar",
    "location": "åŒ—äº¬",
    "latitude": 39.90,
    "longitude": 116.40
}


def test_analysis_api(endpoint: str, api_name: str) -> bool:
    """
    æµ‹è¯•åˆ†ææ¥å£ï¼ˆé€šè¿‡ gRPC ç½‘å…³ï¼‰
    
    Args:
        endpoint: ç«¯ç‚¹è·¯å¾„
        api_name: API åç§°ï¼ˆç”¨äºæ˜¾ç¤ºï¼‰
        
    Returns:
        bool: æµ‹è¯•æ˜¯å¦é€šè¿‡
    """
    print(f"\n{'='*60}")
    print(f"æµ‹è¯•: {api_name} ({endpoint})")
    print(f"{'='*60}")
    
    # æ³¨æ„ï¼šæµå¼æ¥å£ï¼ˆSSEï¼‰åœ¨ gRPC ç½‘å…³ä¸­å¯èƒ½è¿”å›é”™è¯¯
    # å› ä¸º gRPC-Web ä¸æ”¯æŒæµå¼å“åº”
    # æˆ‘ä»¬ä¸»è¦éªŒè¯ï¼š
    # 1. ç«¯ç‚¹æ˜¯å¦æ³¨å†Œ
    # 2. 7ä¸ªæ ‡å‡†å‚æ•°æ˜¯å¦èƒ½æ­£ç¡®ä¼ é€’
    # 3. æ˜¯å¦èƒ½æ­£ç¡®è¿”å›é”™è¯¯ä¿¡æ¯ï¼ˆå¦‚æœæ˜¯æµå¼æ¥å£ï¼‰
    
    result = test_gateway_endpoint(endpoint, STANDARD_PARAMS)
    
    print(f"æˆåŠŸ: {result.get('success')}")
    print(f"çŠ¶æ€ç : {result.get('status_code')}")
    
    if result.get('error'):
        error_msg = result.get('error', '')
        # æµå¼æ¥å£åœ¨ gRPC ç½‘å…³ä¸­å¯èƒ½è¿”å›é”™è¯¯ï¼Œè¿™æ˜¯é¢„æœŸçš„
        if 'stream' in endpoint.lower() or 'StreamingResponse' in error_msg:
            print(f"âš ï¸  æµå¼æ¥å£åœ¨ gRPC ç½‘å…³ä¸­ä¸æ”¯æŒï¼ˆè¿™æ˜¯é¢„æœŸçš„ï¼‰")
            print(f"   é”™è¯¯ä¿¡æ¯: {error_msg[:200]}...")
            # æµå¼æ¥å£ä¸æ”¯æŒï¼Œä½†æˆ‘ä»¬éªŒè¯äº†å‚æ•°ä¼ é€’ï¼Œè¿”å› True
            return True
        else:
            print(f"âŒ é”™è¯¯: {error_msg[:200]}...")
            return False
    
    if result.get('data'):
        data = result.get('data', {})
        if isinstance(data, dict):
            print(f"âœ… æ¥å£è°ƒç”¨æˆåŠŸ")
            print(f"   æ•°æ®é”®: {list(data.keys())[:5]}...")
            return True
        else:
            print(f"âš ï¸  è¿”å›æ•°æ®ç±»å‹: {type(data)}")
            return True
    
    return result.get('success', False)


def main():
    """ä¸»æµ‹è¯•å‡½æ•°"""
    print("\n" + "="*60)
    print("5ä¸ªåˆ†ææ¥å£çš„ gRPC ç½‘å…³æµ‹è¯•ï¼ˆéªŒè¯7ä¸ªæ ‡å‡†å‚æ•°ï¼‰")
    print("="*60)
    print(f"API åŸºç¡€ URL: {API_BASE_URL}")
    
    # æ£€æŸ¥æœåŠ¡æ˜¯å¦è¿è¡Œ
    try:
        response = requests.get(f"{API_BASE_URL}/health", timeout=5)
        if response.status_code == 200:
            print("âœ… æœåŠ¡æ­£åœ¨è¿è¡Œ")
        else:
            print(f"âš ï¸  æœåŠ¡å“åº”å¼‚å¸¸: HTTP {response.status_code}")
            return 1
    except requests.exceptions.RequestException as e:
        print(f"âŒ æœåŠ¡æœªè¿è¡Œæˆ–æ— æ³•è¿æ¥: {e}")
        print(f"è¯·å…ˆå¯åŠ¨æœåŠ¡: python3 server/start.py")
        return 1
    
    # æµ‹è¯•çš„5ä¸ªåˆ†ææ¥å£
    test_cases = [
        ("/bazi/marriage-analysis/stream", "å©šå§»åˆ†æ"),
        ("/career-wealth/stream", "äº‹ä¸šè´¢å¯Œåˆ†æ"),
        ("/children-study/stream", "å­å¥³å­¦ä¸šåˆ†æ"),
        ("/health/stream", "å¥åº·åˆ†æ"),
        ("/general-review/stream", "æ€»è¯„åˆ†æ"),
    ]
    
    # è¿è¡Œæµ‹è¯•
    results = []
    for endpoint, api_name in test_cases:
        success = test_analysis_api(endpoint, api_name)
        results.append((api_name, success))
    
    # æ±‡æ€»ç»“æœ
    print("\n" + "="*60)
    print("æµ‹è¯•ç»“æœæ±‡æ€»")
    print("="*60)
    
    passed = 0
    failed = 0
    
    for name, success in results:
        status = "âœ… é€šè¿‡" if success else "âŒ å¤±è´¥"
        print(f"{name}: {status}")
        if success:
            passed += 1
        else:
            failed += 1
    
    print(f"\næ€»è®¡: {passed} ä¸ªé€šè¿‡, {failed} ä¸ªå¤±è´¥")
    
    if failed == 0:
        print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼5ä¸ªåˆ†ææ¥å£çš„7ä¸ªæ ‡å‡†å‚æ•°éªŒè¯æˆåŠŸã€‚")
        print("\næ³¨æ„ï¼šæµå¼æ¥å£ï¼ˆSSEï¼‰åœ¨ gRPC ç½‘å…³ä¸­ä¸æ”¯æŒæµå¼å“åº”ï¼Œ")
        print("      ä½†å‚æ•°ä¼ é€’éªŒè¯é€šè¿‡ã€‚å¦‚éœ€æµå¼åŠŸèƒ½ï¼Œè¯·ç›´æ¥ä½¿ç”¨ REST APIã€‚")
        return 0
    else:
        print(f"\nâš ï¸  æœ‰ {failed} ä¸ªæµ‹è¯•å¤±è´¥ï¼Œè¯·æ£€æŸ¥æœåŠ¡çŠ¶æ€ã€‚")
        return 1


if __name__ == "__main__":
    sys.exit(main())

