#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æµ‹è¯• FrontendGateway æœåŠ¡å¯ç”¨æ€§

æµ‹è¯• frontend_gateway.proto å®šä¹‰çš„ FrontendGateway.Call æ–¹æ³•
"""

import sys
import os
import json
import requests
from typing import Dict, Any

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°è·¯å¾„
PROJECT_ROOT = os.path.dirname(os.path.dirname(os.path.abspath(__file__)))
sys.path.insert(0, PROJECT_ROOT)

API_BASE_URL = "http://localhost:8001"
GATEWAY_ENDPOINT = f"{API_BASE_URL}/api/grpc-web/frontend.gateway.FrontendGateway/Call"


def encode_frontend_request(endpoint: str, payload_json: str = "") -> bytes:
    """
    æ‰‹åŠ¨ç¼–ç  FrontendJsonRequest protobuf æ¶ˆæ¯
    
    Args:
        endpoint: è¦è°ƒç”¨çš„ REST ç›¸å¯¹è·¯å¾„
        payload_json: è¯·æ±‚ä½“ï¼ˆJSON å­—ç¬¦ä¸²å½¢å¼ï¼‰
        
    Returns:
        bytes: ç¼–ç åçš„ protobuf æ¶ˆæ¯
    """
    buffer = bytearray()
    
    # string endpoint = 1; (wire_type = 2)
    if endpoint:
        endpoint_bytes = endpoint.encode('utf-8')
        buffer.extend(_write_varint((1 << 3) | 2))  # field_number=1, wire_type=2 (string)
        buffer.extend(_write_varint(len(endpoint_bytes)))
        buffer.extend(endpoint_bytes)
    
    # string payload_json = 2; (wire_type = 2)
    if payload_json:
        payload_bytes = payload_json.encode('utf-8')
        buffer.extend(_write_varint((2 << 3) | 2))  # field_number=2, wire_type=2 (string)
        buffer.extend(_write_varint(len(payload_bytes)))
        buffer.extend(payload_bytes)
    
    return bytes(buffer)


def _write_varint(value: int) -> bytes:
    """å†™å…¥ protobuf varint"""
    buffer = bytearray()
    while value > 0x7F:
        buffer.append((value & 0x7F) | 0x80)
        value >>= 7
    buffer.append(value & 0x7F)
    return bytes(buffer)


def wrap_grpc_web_frame(payload: bytes) -> bytes:
    """
    å°† protobuf æ¶ˆæ¯åŒ…è£…ä¸º gRPC-Web å¸§
    
    Args:
        payload: protobuf æ¶ˆæ¯å­—èŠ‚
        
    Returns:
        bytes: gRPC-Web å¸§
    """
    flag = 0x00  # æ•°æ®å¸§æ ‡å¿—
    length = len(payload)
    header = bytes([flag]) + length.to_bytes(4, byteorder='big')
    return header + payload


def decode_frontend_response(body: bytes) -> Dict[str, Any]:
    """
    è§£ç  FrontendJsonResponse protobuf æ¶ˆæ¯
    
    Args:
        body: gRPC-Web å“åº”ä½“
        
    Returns:
        Dict: è§£ç åçš„å“åº”æ•°æ®
    """
    # è§£æ gRPC-Web å¸§
    if len(body) < 5:
        raise ValueError("gRPC-Web å¸§é•¿åº¦ä¸è¶³")
    
    flag = body[0]
    if flag & 0x80:
        raise ValueError("é¦–å¸§ä¸åº”ä¸º trailer")
    
    length = int.from_bytes(body[1:5], byteorder='big')
    message_bytes = body[5:5+length]
    
    # è§£æ protobuf æ¶ˆæ¯
    result = {
        'success': False,
        'data_json': '',
        'error': '',
        'status_code': 200
    }
    
    idx = 0
    while idx < len(message_bytes):
        if idx >= len(message_bytes):
            break
        
        # è¯»å– field_number å’Œ wire_type
        tag, idx = _read_varint(message_bytes, idx)
        field_number = tag >> 3
        wire_type = tag & 0x7
        
        if wire_type == 0:  # varint
            value, idx = _read_varint(message_bytes, idx)
            if field_number == 1:  # success (bool)
                result['success'] = bool(value)
            elif field_number == 4:  # status_code (int32)
                result['status_code'] = value
        elif wire_type == 2:  # string/bytes
            length, idx = _read_varint(message_bytes, idx)
            value_bytes = message_bytes[idx:idx+length]
            idx += length
            value = value_bytes.decode('utf-8')
            if field_number == 2:  # data_json
                result['data_json'] = value
            elif field_number == 3:  # error
                result['error'] = value
    
    return result


def _read_varint(data: bytes, idx: int) -> tuple:
    """è¯»å– protobuf varint"""
    shift = 0
    result = 0
    
    while idx < len(data):
        byte = data[idx]
        idx += 1
        result |= (byte & 0x7F) << shift
        if not (byte & 0x80):
            return result, idx
        shift += 7
    
    raise ValueError("varint è§£æä¸å®Œæ•´")


def test_gateway_endpoint(endpoint: str, payload: Dict[str, Any] = None) -> Dict[str, Any]:
    """
    æµ‹è¯• FrontendGateway.Call æ–¹æ³•
    
    Args:
        endpoint: REST ç«¯ç‚¹è·¯å¾„ï¼ˆå¦‚ "/bazi/interface"ï¼‰
        payload: è¯·æ±‚è½½è·ï¼ˆå­—å…¸ï¼‰
        
    Returns:
        Dict: å“åº”æ•°æ®
    """
    # å‡†å¤‡è¯·æ±‚æ•°æ®
    payload_json = json.dumps(payload, ensure_ascii=False) if payload else ""
    
    # ç¼–ç  protobuf æ¶ˆæ¯
    proto_message = encode_frontend_request(endpoint, payload_json)
    
    # åŒ…è£…ä¸º gRPC-Web å¸§
    grpc_web_frame = wrap_grpc_web_frame(proto_message)
    
    # å‘é€è¯·æ±‚
    headers = {
        "Content-Type": "application/grpc-web+proto",
        "Accept": "application/grpc-web+proto"
    }
    
    try:
        response = requests.post(
            GATEWAY_ENDPOINT,
            data=grpc_web_frame,
            headers=headers,
            timeout=30
        )
        
        print(f"\n{'='*60}")
        print(f"æµ‹è¯•ç«¯ç‚¹: {endpoint}")
        print(f"HTTP çŠ¶æ€ç : {response.status_code}")
        print(f"å“åº”å¤´: {dict(response.headers)}")
        print(f"{'='*60}\n")
        
        if response.status_code != 200:
            return {
                'success': False,
                'error': f"HTTP {response.status_code}: {response.text}",
                'status_code': response.status_code
            }
        
        # è§£ç å“åº”
        response_data = decode_frontend_response(response.content)
        
        # è§£æ data_json
        if response_data.get('data_json'):
            try:
                response_data['data'] = json.loads(response_data['data_json'])
            except json.JSONDecodeError:
                response_data['data'] = response_data['data_json']
        
        return response_data
        
    except requests.exceptions.RequestException as e:
        return {
            'success': False,
            'error': f"è¯·æ±‚å¤±è´¥: {str(e)}",
            'status_code': 0
        }


def test_health_check():
    """æµ‹è¯•å¥åº·æ£€æŸ¥ç«¯ç‚¹"""
    print("\n" + "="*60)
    print("æµ‹è¯• 1: å¥åº·æ£€æŸ¥ç«¯ç‚¹ï¼ˆé€šè¿‡ç½‘å…³ï¼‰")
    print("="*60)
    
    # å…ˆç›´æ¥æµ‹è¯• REST ç«¯ç‚¹æ˜¯å¦å¯ç”¨
    try:
        response = requests.get(f"{API_BASE_URL}/health", timeout=5)
        print(f"âœ… REST /health ç«¯ç‚¹å¯ç”¨: {response.status_code}")
    except Exception as e:
        print(f"âŒ REST /health ç«¯ç‚¹ä¸å¯ç”¨: {e}")
        return False
    
    # æ³¨æ„ï¼š/health å¯èƒ½ä¸åœ¨ SUPPORTED_ENDPOINTS ä¸­ï¼Œæˆ‘ä»¬æµ‹è¯•ä¸€ä¸ªå·²çŸ¥çš„ç«¯ç‚¹
    return True


def test_bazi_interface():
    """æµ‹è¯•å…«å­—æ¥å£ç«¯ç‚¹"""
    print("\n" + "="*60)
    print("æµ‹è¯• 2: /bazi/interface ç«¯ç‚¹")
    print("="*60)
    
    payload = {
        "solar_date": "1990-01-15",
        "solar_time": "12:00",
        "gender": "male",
        "name": "æµ‹è¯•ç”¨æˆ·",
        "location": "åŒ—äº¬"
    }
    
    result = test_gateway_endpoint("/bazi/interface", payload)
    
    print(f"æˆåŠŸ: {result.get('success')}")
    print(f"çŠ¶æ€ç : {result.get('status_code')}")
    if result.get('error'):
        print(f"é”™è¯¯: {result.get('error')}")
    if result.get('data'):
        print(f"æ•°æ®é”®: {list(result.get('data', {}).keys())[:10]}...")
    
    return result.get('success', False)


def test_shengong_minggong():
    """æµ‹è¯•èº«å®«å‘½å®«ç«¯ç‚¹"""
    print("\n" + "="*60)
    print("æµ‹è¯• 3: /bazi/shengong-minggong ç«¯ç‚¹")
    print("="*60)
    
    payload = {
        "solar_date": "1990-01-15",
        "solar_time": "12:00",
        "gender": "male"
    }
    
    result = test_gateway_endpoint("/bazi/shengong-minggong", payload)
    
    print(f"æˆåŠŸ: {result.get('success')}")
    print(f"çŠ¶æ€ç : {result.get('status_code')}")
    if result.get('error'):
        print(f"é”™è¯¯: {result.get('error')}")
    if result.get('data'):
        data = result.get('data', {})
        if isinstance(data, dict):
            print(f"æ•°æ®é”®: {list(data.keys())[:10]}...")
        else:
            print(f"æ•°æ®ç±»å‹: {type(data)}")
    
    return result.get('success', False)


def test_invalid_endpoint():
    """æµ‹è¯•æ— æ•ˆç«¯ç‚¹"""
    print("\n" + "="*60)
    print("æµ‹è¯• 4: æ— æ•ˆç«¯ç‚¹ï¼ˆé”™è¯¯å¤„ç†ï¼‰")
    print("="*60)
    
    result = test_gateway_endpoint("/invalid/endpoint", {})
    
    print(f"æˆåŠŸ: {result.get('success')}")
    print(f"çŠ¶æ€ç : {result.get('status_code')}")
    print(f"é”™è¯¯: {result.get('error', 'æ— é”™è¯¯ä¿¡æ¯')}")
    
    # æ— æ•ˆç«¯ç‚¹åº”è¯¥è¿”å›é”™è¯¯ï¼ˆgrpc-status=12 UNIMPLEMENTEDï¼‰ï¼Œè¿™æ˜¯é¢„æœŸçš„
    # æ£€æŸ¥æ˜¯å¦è¿”å›äº†æ­£ç¡®çš„é”™è¯¯ä¿¡æ¯
    has_error = bool(result.get('error'))
    correct_status = result.get('status_code') == 404 or (not result.get('success'))
    return has_error and correct_status


def main():
    """ä¸»æµ‹è¯•å‡½æ•°"""
    print("\n" + "="*60)
    print("FrontendGateway æœåŠ¡å¯ç”¨æ€§æµ‹è¯•")
    print("="*60)
    print(f"API åŸºç¡€ URL: {API_BASE_URL}")
    print(f"ç½‘å…³ç«¯ç‚¹: {GATEWAY_ENDPOINT}")
    
    # æ£€æŸ¥æœåŠ¡æ˜¯å¦è¿è¡Œ
    try:
        response = requests.get(f"{API_BASE_URL}/health", timeout=5)
        if response.status_code == 200:
            print("âœ… æœåŠ¡æ­£åœ¨è¿è¡Œ")
        else:
            print(f"âš ï¸  æœåŠ¡å“åº”å¼‚å¸¸: HTTP {response.status_code}")
            return
    except requests.exceptions.RequestException as e:
        print(f"âŒ æœåŠ¡æœªè¿è¡Œæˆ–æ— æ³•è¿æ¥: {e}")
        print(f"è¯·å…ˆå¯åŠ¨æœåŠ¡: python3 server/start.py")
        return
    
    # è¿è¡Œæµ‹è¯•
    results = []
    
    # æµ‹è¯• 1: å¥åº·æ£€æŸ¥ï¼ˆéªŒè¯æœåŠ¡å¯ç”¨æ€§ï¼‰
    results.append(("å¥åº·æ£€æŸ¥", test_health_check()))
    
    # æµ‹è¯• 2: å…«å­—æ¥å£
    results.append(("/bazi/interface", test_bazi_interface()))
    
    # æµ‹è¯• 3: èº«å®«å‘½å®«
    results.append(("/bazi/shengong-minggong", test_shengong_minggong()))
    
    # æµ‹è¯• 4: æ— æ•ˆç«¯ç‚¹ï¼ˆé”™è¯¯å¤„ç†ï¼‰
    results.append(("æ— æ•ˆç«¯ç‚¹å¤„ç†", test_invalid_endpoint()))
    
    # æ±‡æ€»ç»“æœ
    print("\n" + "="*60)
    print("æµ‹è¯•ç»“æœæ±‡æ€»")
    print("="*60)
    
    passed = 0
    failed = 0
    
    for name, success in results:
        status = "âœ… é€šè¿‡" if success else "âŒ å¤±è´¥"
        print(f"{name}: {status}")
        if success:
            passed += 1
        else:
            failed += 1
    
    print(f"\næ€»è®¡: {passed} ä¸ªé€šè¿‡, {failed} ä¸ªå¤±è´¥")
    
    if failed == 0:
        print("\nğŸ‰ æ‰€æœ‰æµ‹è¯•é€šè¿‡ï¼FrontendGateway æœåŠ¡å¯ç”¨ã€‚")
        return 0
    else:
        print(f"\nâš ï¸  æœ‰ {failed} ä¸ªæµ‹è¯•å¤±è´¥ï¼Œè¯·æ£€æŸ¥æœåŠ¡çŠ¶æ€ã€‚")
        return 1


if __name__ == "__main__":
    sys.exit(main())
